fixes horizontal scrolling issue

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -41,3 +41,7 @@
     @apply opacity-100;
   }
 }
+
+code {
+  line-break: anywhere;
+}
